--- a/Flexbox Challenge #4/style.css
+++ b/Flexbox Challenge #4/style.css
@@ -26,6 +26,10 @@ header {
     margin: 0 auto;
 }
 
+.dark-heading {
+    color: var(--primary-color);
+}
+
 .light-heading {
     color: var(--secondary-color);
 }
